# DSEmu

./: .gitignore  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DSEmu.sln  DSEmu.vcxproj  DSEmu.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  analyze  arm9.bin.disassembled  cmake_install.cmake
.github/workflows/: cmake.yml
Debug/: DSEmu.ilk
Manual/: GBATEK - GBA_NDS Technical Info.htm  GBATek-Documentation.aux  GBATek-Documentation.tex  GBATek-Documentation.toc  Imran Nazar: The Smallest NDS File.html  NDS_Tutorials Day 2 - Dev-Scene.html  OSDL - A guide to homebrew development for the Nintendo DS.html  smallestnds.tex
include/: ALU.hpp  ARM.hpp  ARM7.hpp  ARM9.hpp  BIOS.hpp  BOperation.hpp  BarrelShifter.hpp  Bits.hpp  BranchInstruction.hpp  CMPOperation.hpp  CP.hpp  CP14.hpp  CP15.hpp  Condition.hpp  DS.hpp  DSCartridge.hpp  DSCartridgeHeader.hpp  DSCartridgeLoader.hpp  DSEmu.hpp  DSSystem.hpp  DataProcessingInstruction.hpp  DisplayEngine.hpp  DisplayEngineA.hpp  DisplayEngineB.hpp  GPU.hpp  HalfwordDataTransferInstruction.hpp  Instruction.hpp  InstructionDecoder.hpp  InstructionExecutionStage.hpp  Logger.hpp  MOVOperation.hpp  Memory.hpp  MemoryMap.hpp  MemoryType.hpp  Opcode.hpp  Operation.hpp  OperationType.hpp  Pointer.hpp  ProcessorMode.hpp  ProcessorState.hpp  (+8 more)
make/: Library.makefile  Linux.makefile  Windows.makefile
src/: DSEmu.cpp  gl3w.c  main.cpp
src/core/: DS.cpp  DSSystem.cpp
src/util/: Bits.cpp  Logger.cpp  Pointer.cpp  (+1 more)
(+45 files in other folders)
